--- a/LayoutLM_fine_tunning_for_SROIE_dataset.ipynb
+++ b/LayoutLM_fine_tunning_for_SROIE_dataset.ipynb
@@ -6,7 +6,7 @@
       "name": "LayoutLM fine tunning for SROIE dataset.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/QKgDM8hrUu3UDbf5llPY",
+      "authorship_tag": "ABX9TyNZan6OhxKPr+juS35J0+HZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "import re\n",
         "import random"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
         "    # There are a few problems, we will just ignore them and print the error associated with it\n",
         "    print(file + \" | \" + repr(e))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "  except Exception as e:\n",
         "    print(file + \" | \" + repr(e))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "# Now let's merge the two dataframes based on the filename\n",
         "df = pd.merge(df_sentences,df_labels,on='filename')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
         "# os.chdir('/content/drive/My Drive/Msc/Tese/Datasets/SROIE2019/')\n",
         "# df.to_csv('df.csv')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
         "# df = pd.read_csv('/content/drive/My Drive/Msc/Tese/Datasets/SROIE2019/df.csv')\n",
         "# df = df.drop(['Unnamed: 0'], axis=1)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "df['sentence'] = df['sentence'].map(lambda a: ast.literal_eval(a))\n",
         "df['bboxes'] = df['bboxes'].map(lambda a: ast.literal_eval(a))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
       "source": [
         "df.head(5)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
         "    x0 = x1f\n",
         "  return boxs_splitted"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +496,7 @@
         "  bbox = flat_list_one_level_list_of_lists(bbox)\n",
         "  return sent, labels, bbox"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "  labels_list.append(labels.copy())\n",
         "  bbox_list.append(bbox.copy())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +592,7 @@
         "    labels_list_temp.append(labels_list3)\n",
         "  return sentences_list_temp, bbox_list_temp, labels_list_temp"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
       "source": [
         "sentences_list, bbox_list, labels_list = break_sentences(sentences_list, labels_list, bbox_list)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "for s, l, b in zip(sentences_list[0],labels_list[0],bbox_list[0]):\n",
         "  print(\"{}\\t\\t{}\\t\\t{}\".format(s,l,b))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,9 +750,19 @@
         "    if box[3] > max_height: max_height = box[3]\n",
         "  max_width += min_x0\n",
         "  max_height += min_y0\n",
-        "  return max_height, max_width"
+        "  return max_height, max_width\n",
+        "\n",
+        "def get_unique(some_array, seen=None):\n",
+        "    if seen is None:\n",
+        "        seen = set()\n",
+        "    for i in some_array:\n",
+        "        if isinstance(i, list):\n",
+        "            seen.union(get_unique(i, seen))\n",
+        "        else:\n",
+        "            seen.add(i)\n",
+        "    return list(seen)\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +799,7 @@
         "          fbw.write(\"\\n\")\n",
         "          fiw.write(\"\\n\")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +815,7 @@
         "split_indexes_train = split_indexes[:cut]\n",
         "split_indexes_test = split_indexes[cut:]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +826,7 @@
       "source": [
         "write_files('/content/drive/My Drive/Msc/Tese/Datasets/SROIE2019/', 'train', sentences_list, labels_list, bbox_list, split_indexes_train)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +837,26 @@
       "source": [
         "write_files('/content/drive/My Drive/Msc/Tese/Datasets/SROIE2019/', 'test', sentences_list, labels_list, bbox_list, split_indexes_test)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZX_A7a_h1Bk2"
+      },
+      "source": [
+        "# Finally we write the labels.txt file\r\n",
+        "tag_values = get_unique(labels_list)\r\n",
+        "with open(\r\n",
+        "      os.path.join('/content/drive/My Drive/Msc/Tese/Datasets/SROIE2019/', \"labels.txt\"),\r\n",
+        "      \"w\",\r\n",
+        "      encoding=\"utf8\",\r\n",
+        "  ) as lb:\r\n",
+        "      for val in tag_values:\r\n",
+        "        lb.write(\"{}\\n\".format(val))"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -847,7 +876,7 @@
       "source": [
         "os.chdir('/content')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +894,7 @@
         "cd unilm/layoutlm\n",
         "pip install ."
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +958,7 @@
       "source": [
         "os.chdir('/content/unilm/layoutlm/examples/seq_labeling')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -956,7 +985,7 @@
         "rm '/content/unilm/layoutlm/examples/seq_labeling/data/cached_train_layoutlm-base-uncased_512'\n",
         "rm '/content/unilm/layoutlm/examples/seq_labeling/data/cached_test_layoutlm-base-uncased_512'"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +1011,7 @@
         "ls /content/unilm/layoutlm/examples/seq_labeling/data/\n",
         "cat /content/unilm/layoutlm/examples/seq_labeling/data/labels.txt"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1045,7 @@
         "# Check model parameters\n",
         "cat \"/content/drive/My Drive/Msc/Tese/Modelos/layoutlm-base-uncased/config.json\""
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1089,7 @@
         "%%bash\n",
         "sed -i 's/\"num_attention_heads\": 12,/\"num_attention_heads\": 8,/' \"/content/drive/My Drive/Msc/Tese/Modelos/layoutlm-base-uncased/config.json\""
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1089,7 +1118,7 @@
         "                            --per_gpu_train_batch_size 8 \\\n",
         "                            --per_gpu_eval_batch_size 8"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1496,7 +1525,7 @@
         "                            --labels data/labels.txt \\\n",
         "                            --per_gpu_eval_batch_size 8"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1520,7 +1549,7 @@
       "source": [
         "cat output/test_results.txt"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1548,7 +1577,7 @@
         "%%bash\n",
         "head -60 output/test_predictions.txt"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
